# phonemequest

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements-drl.txt  requirements.txt
agent/: __init__.py  baselines.py  child_q_store.py  env.py  evaluate.py  train_ppo.py
audio_features/: __init__.py  aspiration_burst.py  common.py  frication.py  syllable_rhythm.py  vowel_loudness.py  vowel_quality.py
frontend_prototype/: README.md  rocket_launch.html  rocket_logic.js  rocket_logic.test.js
retraining/: __init__.py  data_store.py  scheduler.py
schemas/: __init__.py  session_event.py
simulator/: __init__.py  simulator_calibration.py  student_model.py
tests/: test_audio_features.py  test_retraining.py
word_level/: __init__.py  asr_match.py
